@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2023-10-14T08:10:34Z",
-  "count_outdated" : 1035,
-  "uniques_outdated" : 657,
+  "timestamp" : "2023-10-14T16:10:09Z",
+  "count_outdated" : 1038,
+  "uniques_outdated" : 659,
   "count" : 1075,
   "uniques" : 684,
   "clones" : [
-    {
-      "timestamp": "2023-09-30T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 3 ],
-      "count_decinc": [ 2, 3 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 2 ],
-      "uniques_decinc": [ 1, 2 ]
-    },
     {
       "timestamp": "2023-10-01T00:00:00Z",
       "count": 4,
