@@ -1,12 +1,7 @@
 {
-  "count": 38,
+  "count": 37,
   "uniques": 6,
   "clones": [
-    {
-      "timestamp": "2023-09-30T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
     {
       "timestamp": "2023-10-01T00:00:00Z",
       "count": 4,
