@@ -1,3 +1,12 @@
+2023-10-14T16:10:09Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6518677794 # 1250
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2023-10-14
+* notice: last 14d: unq all: 6 37
+* notice: prev accum: outdated-unq outdated-all / unq all: 657 1035 / 684 1075
+* notice: next accum: outdated-unq outdated-all / unq all: 659 1038 / 684 1075
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: removed / changed dates: [2023-09-30] / []
+
 2023-10-14T08:10:34Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6516498289 # 1249
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2023-10-14
